--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
     <div id="container">
         <div id="imgSpace" class="flexItem">
+            <img src="" id="pic">
         </div>
         <div id="btnSpace" class="flexItem">
             <button type="button" id="btn1" class="btn btn-primary btn-sm">Previous</button>
