--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script defer type="module" src="click.js"></script>
     <script defer type="module" src="image.js"></script>
     <title>Photo Gallery</title>
@@ -15,13 +13,20 @@
 
 <body>
     <div id="container">
-        <div id="imgSpace" class="flexItem">
-            <img src="" id="pic">
-        </div>
-        <div id="btnSpace" class="flexItem">
-            <button type="button" id="btn1" class="btn btn-primary btn-sm">Previous</button>
-            <button type="button" id="btn2" class="btn btn-primary btn-sm">Next</button>
-        </div>
+        <header id="topic">
+            Galler.<span class="topicSpan">io</span>
+        </header>
+        <main>
+            <img src="" id="loadedPic">
+            <!-- <img src="" id="loadingPic"> -->
+        </main>
+        <footer >
+                <a><label id="previousBtn"></label></a>
+                <label id="loadPrev">Load Prev</label>
+                <label id="indexNo">1</label>
+                <label id="loadNext">Load Next</label>
+                <a><label id="nextBtn"></label></a>
+        </footer>
     </div>
 
 </body>
